--- a/hrym-provider/hrym-provider-quatz/src/main/resources/bootstrap-dev.yml
+++ b/hrym-provider/hrym-provider-quatz/src/main/resources/bootstrap-dev.yml
@@ -1,78 +1,31 @@
 spring:
-  sleuth:
-    traceId128: true
-    sampler:
-      probability: 1.0
-  zipkin:
-    base-url: http://127.0.0.1:9411
-  redis:
-    host: 192.168.1.210
-    password: 123456
-    port: 6379
-    ssl: false
-    timeout: 300
-    jedis:
-      pool:
-        max-active: 800
-        max-idle: 20
-        max-wait: -1
-        min-idle: 0
-  datasource:
-      dynamic: #设置默认的数据源或者数据源组,默认值即为master
-        primary: master #设置默认的数据源或者数据源组,默认值即为master
-        druid: #以下是全局默认值，可以全局更改
-          filters: stat,wall,config
-          max-active: 100
-          initial-size: 1
-          max-wait: 60000
-          min-idle: 1
-          time-between-eviction-runs-millis: 60000
-          min-evictable-idle-time-millis: 300000
-          validation-query: select 'x'
-          test-while-idle: true
-          test-on-borrow: false
-          test-on-return: false
-          pool-prepared-statements: true
-          max-open-prepared-statements: 50
-          max-pool-prepared-statement-per-connection-size: 20
-        datasource:
-          master:
-            username: root
-            password: root@123456
-            driver-class-name: com.mysql.jdbc.Driver
-            url: jdbc:mysql://192.168.1.210:3307/hrym-dev?useUnicode=true&characterEncoding=utf8
-          slave_1:
-            username: root
-            password: root@123456
-            driver-class-name: com.mysql.jdbc.Driver
-            url: jdbc:mysql://192.168.1.210:3307/hrym-dev?useUnicode=true&characterEncoding=utf8
-          slave_2:
-            username: root
-            password: root@123456
-            driver-class-name: com.mysql.jdbc.Driver
-            url: jdbc:mysql://192.168.1.210:3307/hrym-dev?useUnicode=true&characterEncoding=utf8
-
+  cloud:
+    config:
+      profile: dev
+      label: master
+      name: datasource,redis,eureka,zipkin,txlcn
+      uri: http://127.0.0.1:5588/
+      fail-fast: true
+      retry:
+        initial-interval: 1000
+        max-attempts: 6
+        max-interval: 2000
+        multiplier: 1.1
+  application:
+    name: hrym-provider-quatz
+  autoconfigure:
+    exclude: com.alibaba.druid.spring.boot.autoconfigure.DruidDataSourceAutoConfigure
+mybatis-plus:
+  mapper-locations: classpath*:mybatis/*.xml
+server:
+  port: 8086
 logging:
   level:
     org:
       springframework:
         web: DEBUG
 
-#eureka放在这里是因为config会从eureka里面读取
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://admin:123456@localhost:8761/eureka/eureka
-  instance:
-    prefer-ip-address: true
-    instance-id: ${spring.application.name}:${spring.cloud.client.ip-address}:${spring.application.instance_id:${server.port}}
+#配置超时时间，断点调试，上传大文件等容易超时
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 600000
 
-tx-lcn:
-  client:
-    manager-address: 127.0.0.1:8070
-  logger:
-    enabled: true
-    driver-class-name: com.mysql.jdbc.Driver
-    jdbc-url: jdbc:mysql://192.168.1.210:3307/hrym-dev?useUnicode=true&characterEncoding=utf8
-    username: root
-    password: root@123456
+
