--- a/hrym-provider/pom.xml
+++ b/hrym-provider/pom.xml
@@ -28,6 +28,12 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <!--动态刷新配置文件 依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
@@ -55,10 +61,6 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
         <!--&lt;!&ndash; Sends trace data to zipkin over http (defaults to http://localhost:9411/api/v2/spans) &ndash;&gt;-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -101,6 +103,23 @@
             <groupId>com.hrym.everg</groupId>
             <artifactId>hrym-common-core</artifactId>
         </dependency>
+
+        <!--获取配置文件  重试机制依赖-->
+        <dependency>
+            <groupId>org.springframework.retry</groupId>
+            <artifactId>spring-retry</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+        <!--获取配置中心依赖-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+
+
     </dependencies>
 
 
