--- a/pom.xml
+++ b/pom.xml
@@ -38,18 +38,6 @@
     <dependencyManagement>
         <dependencies>
 
-            <!--<dependency>-->
-                <!--<groupId>org.springframework.cloud</groupId>-->
-                <!--<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>-->
-                <!--<version>2.0.2.RELEASE</version>-->
-            <!--</dependency>-->
-
-            <!--<dependency>-->
-                <!--<groupId>org.springframework.cloud</groupId>-->
-                <!--<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>-->
-                <!--<version>2.0.2.RELEASE</version>-->
-            <!--</dependency>-->
-
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
@@ -58,6 +46,7 @@
                 <scope>import</scope>
             </dependency>
 
+            <!--动态数据源依赖-->
             <dependency>
                 <groupId>com.baomidou</groupId>
                 <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
@@ -89,19 +78,14 @@
                 <version>1.1.10</version>
             </dependency>
 
-            <!--<dependency>-->
-                <!--<groupId>org.springframework.cloud</groupId>-->
-                <!--<artifactId>spring-cloud-starter-openfeign</artifactId>-->
-                <!--<version>2.0.2.RELEASE</version>-->
-            <!--</dependency>-->
-
-
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
                 <version>6.0.5</version>
             </dependency>
 
+
+            <!--zipkin 依赖-->
             <dependency>
                 <groupId>io.zipkin.java</groupId>
                 <artifactId>zipkin-server</artifactId>
@@ -112,13 +96,6 @@
                 <artifactId>zipkin-autoconfigure-ui</artifactId>
                 <version>2.12.0</version>
             </dependency>
-
-            <!--<dependency>-->
-                <!--<groupId>org.springframework.cloud</groupId>-->
-                <!--<artifactId>spring-cloud-starter-zipkin</artifactId>-->
-                <!--<version>2.0.2.RELEASE</version>-->
-            <!--</dependency>-->
-
 
             <dependency>
                 <groupId>com.github.pagehelper</groupId>
@@ -138,19 +115,6 @@
                 <artifactId>txlcn-txmsg-netty</artifactId>
                 <version>5.0.2.RELEASE</version>
             </dependency>
-
-            <!--<dependency>-->
-                <!--<groupId>org.springframework.cloud</groupId>-->
-                <!--<artifactId>spring-cloud-starter-netflix-zuul</artifactId>-->
-                <!--<version>2.0.2.RELEASE</version>-->
-            <!--</dependency>-->
-
-            <!--<dependency>-->
-                <!--<groupId>org.springframework.cloud</groupId>-->
-                <!--<artifactId>spring-cloud-starter-netflix-hystrix-dashboard</artifactId>-->
-                <!--<version>2.0.2.RELEASE</version>-->
-            <!--</dependency>-->
-
 
             <dependency>
                 <groupId>com.hrym.everg</groupId>
@@ -198,6 +162,7 @@
                 <artifactId>hrym-api-pray</artifactId>
                 <version>1.0.0</version>
             </dependency>
+
 
         </dependencies>
 
