--- a/hrym-api/hrym-api-pray/pom.xml
+++ b/hrym-api/hrym-api-pray/pom.xml
@@ -13,6 +13,10 @@
     <packaging>jar</packaging>
 
     <dependencies>
+        <dependency>
+            <groupId>com.hrym.everg</groupId>
+            <artifactId>hrym-api-user</artifactId>
+        </dependency>
 
     </dependencies>
 </project>
