--- a/hrym-server/hrym-server-tm/src/main/resources/bootstrap-prod.yml
+++ b/hrym-server/hrym-server-tm/src/main/resources/bootstrap-prod.yml
@@ -24,9 +24,9 @@ tx-lcn:
   logger:
     enabled: true
     driver-class-name:  com.mysql.jdbc.Driver
-    jdbc-url: jdbc:mysql://192.168.1.210:3307/hrym-dev?useUnicode=true&characterEncoding=utf8
+    jdbc-url: jdbc:mysql://192.168.1.43:3306/hrym?useUnicode=true&characterEncoding=utf8
     username: root
-    password: root@123456
+    password: mysql@123456
   manager:
-    host: 127.0.0.1
+    host: 192.168.1.15
     port: 8070
