--- a/hrym-server/hrym-server-zuul/src/main/resources/bootstrap-test.yml
+++ b/hrym-server/hrym-server-zuul/src/main/resources/bootstrap-test.yml
@@ -30,7 +30,7 @@ logging:
 zuul:
   routes:
     hrym-application-hgx:
-      path: /hgx-application/**
+      path: /hrym-application-hgx-test/**
       serviceId: hrym-application-hgx
 
   sensitive-headers: "*"
