--- a/hrym-application/hrym-application-hgx/src/main/resources/bootstrap-prod.yml
+++ b/hrym-application/hrym-application-hgx/src/main/resources/bootstrap-prod.yml
@@ -15,6 +15,8 @@ spring:
     name: hrym-application-hgx
 server:
   port: 8081
+  servlet:
+    context-path: /hrym-application-hgx
 
 logging:
   level:
